@@ -1,4 +1,4 @@
-/*	$OpenBSD: dns.h,v 1.3 2003/05/14 22:56:51 jakob Exp $	*/
+/*	$OpenBSD: dns.h,v 1.4 2003/10/14 19:42:10 jakob Exp $	*/
 
 /*
  * Copyright (c) 2003 Wesley Griffin. All rights reserved.
@@ -28,7 +28,6 @@
 
 #include "includes.h"
 
-#ifdef DNS
 #ifndef DNS_H
 #define DNS_H
 
@@ -54,4 +53,3 @@ int	verify_host_key_dns(const char *, struct sockaddr *, Key *);
 int	export_dns_rr(const char *, Key *, FILE *, int);
 
 #endif /* DNS_H */
-#endif /* DNS */
