@@ -30,6 +30,9 @@
    - markus@cvs.openbsd.org 2003/10/13 08:22:25
      [scp.1 sftp.1]
      don't refer to options related to forwarding; ok jmc@
+   - jakob@cvs.openbsd.org 2003/10/14 19:42:10
+     [dns.c dns.h readconf.c ssh-keygen.c sshconnect.c]
+     include SSHFP lookup code (not enabled by default). ok markus@
 
 20031009
  - (dtucker) [sshd_config.5] UsePAM defaults to "no".  ok djm@
@@ -1347,4 +1350,4 @@
  - Fix sshd BindAddress and -b options for systems using fake-getaddrinfo.
    Report from murple@murple.net, diagnosis from dtucker@zip.com.au
 
-$Id: ChangeLog,v 1.3076 2003/10/15 05:59:26 dtucker Exp $
+$Id: ChangeLog,v 1.3077 2003/10/15 06:00:47 dtucker Exp $
